--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "server": "nodemon server/index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "node server/index.js",
+    "build": "cd ./client && npm run build && cd .."
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,8 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
