--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,18 @@
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-image-crop": "^10.0.9",
     "react-material-ui-carousel": "^3.4.2",
+    "react-redux": "^8.0.5",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.3.2",
     "react-simple-image-viewer": "^1.2.2",
     "react-transition-group": "^4.4.5",
+    "redux": "^4.2.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
